sort.pancake.lessons.sort.pancake.BasicPancake.scala.error
BasicPancake:2: error: Missing closing brace `}' assumed here
def solve() {
^BasicPancake:2: error: expected class or object definition
def solve() {
^